--- a/src/main/resources/static/css/detail.css
+++ b/src/main/resources/static/css/detail.css
@@ -1,13 +1,13 @@
 @charset "UTF-8";
 
 .conBox1{
-	background-color: #f5f5dc;
+	background-color: #E1BEE7;
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
 
 .comment{
-	background-color: #f5f5dc;
+	background-color: #E1BEE7;
 	display: flex;
 	margin-bottom: 30px;
 	flex-direction: column;
@@ -20,7 +20,7 @@
 	margin-top : 8px;
 }
 .cbtn button {
-    background-color: #d3c8a0;
+    background-color: #D1AEE3;
     color: #4b4b4b;
     padding: 8px 16px;
     border: none;
@@ -31,9 +31,9 @@
 }
 
 .cbtn button:hover {
-    background-color: #b9ad85;
+    background-color: #B78ED0;
 }
 
 .cbtn button:active {
-    background-color: #a1976a;
+    background-color: #A573C4;
 }
