--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,12 @@
       layout:decorate="~{layout/layout}">
 
 <div layout:fragment="content">
-    <h1 style="text-align : center;">My Spring Boot_JPA PROJECT</h1>
-  <div class="container-md">
-
-
-
+  <div class="container-md" style="height : 800px;">
+  <h1 style="text-align : center; color: white; padding-top: 40px;">여행 게시판</h1>
+  <div style="margin-top: 200px;">
+    <p style="color:white; font-size: 15px;">본인의 여행사진과 관련 여행이야기들을 공유하는 게시판사이트입니다. </p>
+    <p style="color:white; font-size: 42px; ">본인만의 아름답다고 생각하는 여행사진을 공유</p>
+    <p style="color:white; font-size: 42px; ">사진과 함께 관련 여행이야기도 공유</p>
   </div>
-
+  </div>
 </div>
