--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -4,9 +4,9 @@
       xmlns:layout="http://www.ultrap.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}">
 
-<div layout:fragment="content">
-  <div class="container-md">
-    <h1>User Join Page</h1>
+<div layout:fragment="content" style="height : 600px;">
+  <div class="container-md cBox" style="margin-top : 200px; width: 700px;">
+    <h1 style="color: white;">User Login Page</h1>
     <hr>
     <form action="/user/login" method="post">
       <div class="mb-3">
@@ -22,7 +22,9 @@
       <div class="mb-3" th:if="${error}">
         <p class="text-danger"> [[${exception}]] </p>
       </div>
-      <button type="submit" class="btn btn-primary">login</button>
+      <div class="flexBox" style="display: flex; justify-content:end;">
+      <button type="submit" class="btn btn-secondary">login</button>
+      </div>
     </form>
 
   </div>
