--- a/src/main/resources/templates/board/detail.html
+++ b/src/main/resources/templates/board/detail.html
@@ -4,15 +4,14 @@
       xmlns:layout="http://www.ultrap.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/layout}"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<link rel="stylesheet" th:href="@{/css/detail.css}">
 
 <head>
   <link rel="stylesheet" th:href="@{/css/detail.css}">
 </head>
 
 <div layout:fragment="content">
-  <div class="container-md">
-    <h1>Board Detail Page </h1>
+  <div class="container-md cBox" style="margin-top:30px;">
+    <h1 style="color: white;">Board Detail Page </h1>
     <hr>
     <th:block th:with="boardDTO=${boardFileDTO.boardDTO}">
       <div class="mb-3">
