--- a/src/main/resources/templates/board/modify.html
+++ b/src/main/resources/templates/board/modify.html
@@ -6,7 +6,7 @@
 
 <div layout:fragment="content">
   <div class="container-md">
-  <h1>Board Modify Page...</h1>
+  <h1 style="color: white;">Board Modify Page...</h1>
   <hr>
     <form action="/board/update" method="post"  enctype="multipart/form-data" th:with="boardDTO=${boardFileDTO.boardDTO}">
       <input type="hidden" name="bno" th:value="${boardDTO.bno}" >
