--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -8,6 +8,8 @@
   <!--/* 부트스트랩 연결 링크 css 연결 링크 */-->
   <link rel="stylesheet" th:href="@{/dist/css/bootstrap.min.css}">
   <script th:src="@{/dist/js/bootstrap.bundle.min.js}"></script>
+  <link rel="stylesheet" th:href="@{/css/header.css}">
+  <link rel="stylesheet" th:href="@{/css/box.css}">
 </head>
 <body>
 <!--/* th:replace="조각 파일의 경로 :: 이름" */-->
